# retinamnist-classification

./: .gitignore  README.md  README_zh.md  generate_figures.py  pyproject.toml
configs/: eval.yaml  train.yaml
configs/callbacks/: default.yaml
configs/data/: retina_mnist.yaml
configs/experiment/: hpo_convnext_tiny.yaml  hpo_efficientnet_b0.yaml  hpo_resnet18.yaml
configs/hparams_search/: convnext_tiny_optuna.yaml  efficientnet_b0_optuna.yaml  resnet18_optuna.yaml
configs/logger/: mlflow.yaml
configs/model/: convnext_tiny.yaml  convnext_tiny_pretrained.yaml  efficientnet_b0.yaml  efficientnet_b0_pretrained.yaml  resnet18.yaml  resnet18_pretrained.yaml  retina_mnist.yaml
scripts/: create_no_pretrain_configs.py  get_best_hparams.py  init_optuna_dbs.py  run_hpo.sh  train_matrix.sh  train_no_pretrain.sh  train_pretrained_comparison.sh  train_with_mlflow.sh
src/: train.py
src/data/: retina_mnist_datamodule.py
src/models/: retina_mnist_module.py
src/models/components/: timm_classifier.py  unet_classifier.py
