[project]
name = "retinamnist-classification"
version = "0.1.0"
description = "Retina MNIST classification using PyTorch Lightning"
authors = [
    {name = "RetinaMNIST Classification Contributors"}
]
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # --------- pytorch --------- #
    "torch>=2.0.0",
    "torchvision>=0.15.0",
    "lightning>=2.0.0",
    "torchmetrics>=0.11.4",
    # --------- hydra --------- #
    "hydra-core==1.3.2",
    "hydra-colorlog==1.2.0",
    "hydra-optuna-sweeper==1.2.0",
    # --------- optuna --------- #
    "optuna-dashboard>=0.9.0,<0.10.0",
    # --------- models --------- #
    "timm>=0.9.0",
    # --------- others --------- #
    "rootutils",
    "rich",
    "mlflow>=3.7.0",
    # --------- evaluation --------- #
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
]

[project.optional-dependencies]
test = [
    "pytest",
]
loggers = [
    "wandb",
    "neptune-client",
    "mlflow",
    "comet-ml",
    "aim>=3.16.2",
]
dev = [
    "pre-commit",
    "pytest",
    "sh",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = [
  "--color=yes",
  "--durations=0",
  "--strict-markers",
  "--doctest-modules",
]
filterwarnings = [
  "ignore::DeprecationWarning",
  "ignore::UserWarning",
]
log_cli = "True"
markers = [
  "slow: slow tests",
]
minversion = "6.0"
testpaths = "tests/"

[tool.coverage.report]
exclude_lines = [
    "pragma: nocover",
    "raise NotImplementedError",
    "raise NotImplementedError()",
    "if __name__ == .__main__.:",
]
